--- a/src/app/componentes/funcionario/atribuir-cargo/atribuir-cargo.component.html
+++ b/src/app/componentes/funcionario/atribuir-cargo/atribuir-cargo.component.html
@@ -22,7 +22,7 @@
                 name="id_funcionario">
             </mat-form-field>
             <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>CPF dox Funcionárix</mat-label>
+              <mat-label>CPF dx Funcionárix</mat-label>
               <input type="text" matInput readonly class="form-control" [(ngModel)]="funcionario.id_funcionario"
                 name="cpf_funcionario">
             </mat-form-field>
