--- a/src/app/componentes/funcionario/lista-func-cargo/lista-func-cargo.component.html
+++ b/src/app/componentes/funcionario/lista-func-cargo/lista-func-cargo.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header-user></app-header-user>
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Funcionários do Cargo: {{id_cargo}}</h5>
