--- a/src/app/componentes/funcionario/editar-func/editar-func.component.html
+++ b/src/app/componentes/funcionario/editar-func/editar-func.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="card mat-elevation-z4 card-form">
   <div class="card-body">
-    <button mat-mini-fab color="primary" routerLink="/mentores" title="Voltar página" [ngStyle]="{'color':'white'}">
+    <button mat-mini-fab color="primary" routerLink="/funcionarios" title="Voltar página" [ngStyle]="{'color':'white'}">
       <mat-icon>keyboard_backspace</mat-icon>
     </button>
     <div class="titulo">
