--- a/src/app/componentes/funcionario/lista-func/lista-func.component.html
+++ b/src/app/componentes/funcionario/lista-func/lista-func.component.html
@@ -1,8 +1,8 @@
-<app-header></app-header>
+<app-header-user></app-header-user>
 <div class="row">
   <div class="col-4">
     <div class="card card-foto">
-      <button mat-mini-fab color="primary" routerLink="/cargo" title="Voltar página" [ngStyle]="{'color':'white'}"
+      <button mat-mini-fab color="primary" routerLink="/card-cargo" title="Voltar página" [ngStyle]="{'color':'white'}"
         style="margin-left: 99%; margin-top: -6%;">
         <mat-icon>keyboard_backspace</mat-icon>
       </button>
@@ -23,7 +23,7 @@
           <div class="jobtitle">
             <p>{{func.func_cidade}}</p>
           </div>
-          <div class="buttons">
+          <!-- <div class="buttons">
             <div class="button1">
               <button class="bot-card"
                 routerLink="/funcionario/editar/{{func.id_funcionario}}/{{id_cargo}}">Editar</button>
@@ -32,7 +32,7 @@
               <button class="bot-card" type="button"
                 routerLink="/funcionario/excluir/{{func.id_funcionario}}">Excluir</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
