--- a/src/app/template/home/home.component.scss
+++ b/src/app/template/home/home.component.scss
@@ -1,154 +1,139 @@
-.fundo-home {
-  background-image: url('../../../assets/istockphoto-466424908-170667a.jpg');
-  height: 730px;
+// #home{
+//   width: 100%;
+//   height: 100vh;
+//   zoom: 117%;
+//   background-image: url('../../../assets/fundo-home.gif');
+//   background-size: contain;
+//   background-repeat: no-repeat;
+//   background-position: center center;
+// }
+
+// #logo {
+//   // position: relative;
+//   width: 270px;
+//   margin-left: 40%;
+//   margin-top: 7%;
+// }
+
+// #btn1 button, #btn2 button {
+//   font-size: 1.2rem;
+//   background-color: #b69386;
+//   color: white
+// }
+
+// #btn1 {
+//   margin-left: 20%;
+//   margin-top: 2%;
+// }
+
+// #btn2 {
+//   margin-left: 47%;
+//   margin-top: 3%;
+// }
+
+// #btn1 button:last-of-type{
+//   margin-left: 40%
+// }
+
+// #btn2 button {
+//   background-color: #455a64;
+// }
+
+@import url("https://rsms.me/inter/inter-ui.css");
+::selection {
+  background: #435761;
+}
+.page {
+  background-image: url("../../../assets/fundo-home.gif");
+  background-size: contain;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  height: 100%;
-  overflow: auto;
-}
-
-// Logo
-
-.logo {
-  margin-left: 30%;
-  padding-top: 20%;
-}
-
-// Ícones da tela de login
-
-svg {
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  overflow: visible;
-}
-
-.svg-icon {
-  cursor: pointer;
-
-  path {
-    stroke: rgba(255,255,255,0.9);
-    fill: none;
-    stroke-width: 1;
-  }
-}
-
-// Formulário de login
-
-input, button {
-  outline: none;
-  border: none;
-}
-
-// Fundo do form
-
-.posicao-form {
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: 0rem;
-  margin-top: -26.5rem;
-  width: 30rem;
-  height: 53rem;
-  overflow: hidden;
+  place-content: center;
+  width: 100%;
+  height: 100vh;
+  zoom: 117%;
 }
-
-.fundo-form {
+.container {
+  display: flex;
+  height: 320px;
+  margin: 0 auto;
+  width: 640px;
+  margin-top: -5%;
+}
+.left {
+  background: rgba(255, 255, 255, 0.22);
+  height: calc(100% - 20px);
+  top: 14px;
   position: relative;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(121, 119, 97, 0.8) 0%, rgba(0,0,0,0.6) 100%);
-  transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
-  transform: scale(1);
-
-  &__form {
-    position: absolute;
-    top: 38%;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    padding: 1.5rem 2.5rem;
-    text-align: center;
-  }
-
-  // Inputs
-  &__row {
-    height: 5rem;
-    padding-top: 1rem;
-    border-bottom: 1px solid rgba(255,255,255,0.2);
-  }
-
-  // Ícones antes do input
-  &__icon {
-    margin-bottom: 0rem;
-    margin-right: 0.5rem;
-
-    &.login path {
-      stroke-dasharray: 73.50196075439453;
-      stroke-dashoffset: 73.50196075439453;
-      animation: animatePath 2s 0.5s forwards;
-    }
-    &.pass path {
-      stroke-dasharray: 92.10662841796875;
-      stroke-dashoffset: 92.10662841796875;
-      animation: animatePath 2s 0.5s forwards;
-    }
-  }
-
-  &__input {
-    display: inline-block;
-    width: 22rem;
-    height: 100%;
-    padding-left: 1.5rem;
-    padding-top: 1.1rem;
-    font-size: 1.3rem;
-    background: transparent;
-    color: #FDFCFD;
-  }
-
-  &__submit {
-    position: relative;
-    width: 60%;
-    height: 3rem;
-    margin: 4.5rem 0 2.2rem;
-    color: rgba(255,255,255,0.8);
-    background: #ff9900;
-    font-size: 1.5rem;
-    border-radius: 1rem;
-    cursor: pointer;
-    overflow: hidden;
-
-    &:disabled{
-      background-color: #fdc166;
-    }
-  }
-
-  &__signup {
-    font-size: 1rem;
-    color: #ABA8AE;
-
-    a {
-      color: #fff;
-      cursor: pointer;
-    }
-  }
-
+  width: 50%;
+  text-align: center;
+}
+.left img {
+  width: 250px;
+}
+.right {
+  background: rgb(66, 66, 66);
+  box-shadow: 0px 0px 40px 16px rgba(0, 0, 0, 0.22);
+  color: #f1f1f2;
+  position: relative;
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: left;
+  padding-left: 5%;
 }
 
-// Animações
-
-@keyframes rotate {
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes animatePath {
-  to {
-    stroke-dashoffset: 0;
-  }
+.cta {
+  border: none;
+  background: none;
 }
 
+.cta span {
+  padding-bottom: 7px;
+  letter-spacing: 4px;
+  font-size: 10px;
+  padding-right: 15px;
+  text-transform: uppercase;
+}
 
+.cta svg {
+  transform: translateX(-8px);
+  transition: all 0.3s ease;
+}
 
+.cta:hover svg {
+  transform: translateX(0);
+}
 
+.cta:active svg {
+  transform: scale(0.9);
+}
+
+.hover-underline-animation {
+  position: relative;
+  color: #fff;
+  padding-bottom: 20px;
+}
+
+.hover-underline-animation:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1.5px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.cta:hover .hover-underline-animation:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
