--- a/src/app/componentes/cargo/cargos/cargos.component.html
+++ b/src/app/componentes/cargo/cargos/cargos.component.html
@@ -1,4 +1,8 @@
 <app-header-user></app-header-user>
+<div class="mt-5 titulo">
+  <h1 id="titulo">
+    Cargos
+  </h1>
 <div class="row m-5">
   <div *ngFor="let cargo of cargos" class="col-3 my-2">
     <div class="card h-100">
