--- a/src/app/componentes/cargo/cargos/cargos.component.scss
+++ b/src/app/componentes/cargo/cargos/cargos.component.scss
@@ -90,3 +90,14 @@ button {
     transform: rotate(20deg)
   }
 }
+
+#titulo {
+  color: #435761;
+  font-weight: 500;
+  font-size: xx-large;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+div .titulo {
+  text-align: center;
+}
