--- a/src/app/componentes/mentor/editar-mentor/editar-mentor.component.html
+++ b/src/app/componentes/mentor/editar-mentor/editar-mentor.component.html
@@ -30,7 +30,7 @@
       <mat-divider style="margin-left: 13%;"></mat-divider>
       <div class="div-escondida" *ngIf="showDiv.atualizar">
         <h3>Deseja alterar a imagem?</h3>
-        <button class="bot-card mx-3" (click)="open(modalEdicao); editarMentor()">Sim</button>
+        <button class="bot-card mx-3" (click)="open(modalEdicao);">Sim</button>
         <button class="bot-card" type="button"
           (click)="showDiv.opcaonao = !showDiv.opcaonao;showDiv.atualizar = false">Não</button>
       </div>
